# freekick

./: .black  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE.txt  README.md  development.env  production.env  pyproject.toml  requirements.txt  setup.py  testing.env
.github/: python-package.yml
.github/workflows/: freekick-build.yml
data/: freekick.db
data/learner_model/: epl.pkl
data/processed/: epl.csv  epl_team_ranking.csv  epl_wpc_pyth.csv  team.csv
data/raw/: notes.txt  readme.txt
data/raw/bundesliga/: season_1993-1994.csv  season_1999-2000.csv  season_2002-2003.csv
data/raw/epl/: season_1993-1994.csv  season_1995-1996.csv  season_2002-2003.csv  season_2005-2006.csv  season_2006-2007.csv  season_2015-2016.csv  season_2017-2018.csv  season_2018-2019.csv  season_2019-2020.csv  season_2021-2022.csv  season_2022-2023.csv  season_2023-2024.csv
doc/: development.rst  index.rst  install.rst  quickstart.rst  references.rst
docs/references/: references.rst
entrypoints/: admin_cli.py  cli.py  data_maintainer.py  db_ops.py  launch-dev.sh  launch.sh
env/: pyvenv.cfg
freekick/: __init__.py  _version.py  admin_cli.py  app.py  cli.py  data_maintainer.py  gunicorn_config.py
freekick/api/: __init__.py  gameweek.py  healthcheck.py  match.py  match_day.py  season.py  settings.py
freekick/database/: __init__.py  _migrate.py  model.py  repository.py  util.py
freekick/datastore/: __init__.py  _migrate.py  model.py  repository.py  util.py
freekick/learners/: __init__.py  classification.py  learner_utils.py  logistic_model.py  regression.py
freekick/model/: __init__.py
freekick/model/ai/: __init__.py  data_store.py  soccer_predictor.py
freekick/model/ai/data/processed/: epl.csv  epl_team_ranking.csv  team.csv
freekick/model/ai/data/raw/: readme.txt
freekick/model/ai/data/raw/bundesliga/: season_1994-1995.csv  season_1995-1996.csv  season_1996-1997.csv  season_1997-1998.csv  season_1998-1999.csv  season_2000-2001.csv  season_2001-2002.csv  season_2003-2004.csv
freekick/model/ai/data/raw/epl/: season_1993-1994.csv  season_1994-1995.csv  season_1995-1996.csv  season_1996-1997.csv  season_1997-1998.csv  season_1998-1999.csv  season_1999-2000.csv  season_2000-2001.csv  season_2001-2002.csv  season_2002-2003.csv  season_2003-2004.csv  season_2004-2005.csv  season_2005-2006.csv  season_2006-2007.csv  season_2007-2008.csv  season_2008-2009.csv  season_2009-2010.csv  season_2010-2011.csv  season_2011-2012.csv  season_2012-2013.csv  season_2013-2014.csv  season_2014-2015.csv  season_2015-2016.csv  season_2016-2017.csv  season_2017-2018.csv  season_2018-2019.csv  season_2019-2020.csv  season_2020-2021.csv  season_2021-2022.csv
freekick/model/ai/models/: __init__.py  logistic_model.py
freekick/model/ai/notebooks/: data_analysis.ipynb
freekick/model/ai/serialized_models/: epl.pkl
freekick/notebooks/: data_analysis.ipynb  playbook.ipynb
freekick/service/: __init__.py  match_day_predictor.py  match_predictor.py  season_service.py  setting_service.py  util.py
freekick/static/css/: base.css  setting.css
freekick/static/js/: freekick.js  setting.js
freekick/templates/: index.html  settings-home.html
freekick/tests/: test_app.py
freekick/utils/: __init__.py  _version.py  freekick_config.py  freekick_logging.py  workspace.py
source/: conf.py
tests/: __init__.py  test_admin_cli.py  test_adminc_cli.py  test_ai.py  test_app.py  test_cli.py  test_data_maintainer.py  test_database.py  test_datastore.py  test_learner.py  test_logistic_model.py  test_prediction_models.py  test_workspace.py
