
[project]
name = "freekick"
requires-python = ">=3.10"
description="Soccer/Football match prediction"
authors = [
  {name = "Kevon Scott", email = "kevon-dev@outlook.com"}
]
maintainers = [
  {name = "Kevon Scott", email = "kevon-dev@outlook.com"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "click>=8.1.0",
  "pandas>=2.2.2",
  "Flask>=3.0.3",
  "Flask-Cors>=4.0.1",
  "flask-restx>=1.3.0",
  "requests>=2.31.0",
]

[project.urls]
Documentation = "https://github.com/kevonscott/freekick"
Changelog = "https://github.com/kevonscott/freekick/blob/master/CHANGELOG.rst"
Repository = "https://github.com/kevonscott/freekick"
Issues = "https://github.com/kevonscott/freekick/issues"

[tool.ruff]
line-length = 79
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "B"]
ignore = []
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
case-sensitive = true

# pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]